import { parseClientPermissions } from "../../commonUtils";

describe("Permissions", () => {
  test("admin set to true in smaug configuration", () => {
    const result = parseClientPermissions({
      smaug: { gateway: { admin: true } },
    });
    expect(result).toMatchSnapshot();
  });
  test("no gateway object in smaug configuration gives default permissions", () => {
    const result = parseClientPermissions({
      smaug: {},
    });
    expect(result).toMatchSnapshot();
  });
  test("Empty gateway object in smaug configuration gives default permissions", () => {
    const result = parseClientPermissions({
      smaug: { gateway: {} },
    });
    expect(result).toMatchSnapshot();
  });
  test("Role from gateway object in smaug configuration gives the roles' permissions", () => {
    const result = parseClientPermissions({
      smaug: { gateway: { role: "ddbcms" } },
    });
    expect(result).toMatchSnapshot();
  });
  test("Unknown role from gateway object in smaug configuration gives default permissions", () => {
    const result = parseClientPermissions({
      smaug: { gateway: { role: "unknown" } },
    });
    expect(result).toMatchSnapshot();
  });
  test("Explicitly setting allowRootFields in gateway object in smaug configuration gives those permissions", () => {
    const result = parseClientPermissions({
      smaug: { gateway: { allowRootFields: ["manifestation"] } },
    });
    expect(result).toMatchSnapshot();
  });
  test("semantic search is only enabled for the bibliotek.dk role", () => {
    const bibdk = parseClientPermissions({
      smaug: { gateway: { role: "bibdk" } },
    });

    const defaults = parseClientPermissions({ smaug: {} });

    expect(bibdk.allowRootFields).toContain("semanticSearch");
    expect(defaults.allowRootFields).not.toContain("semanticSearch");
  });
});
